fix: z-index of magane window on vencord

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,7 +23,7 @@ div#magane {
 	}
 
 	div.stickerWindow {
-		z-index: 2000;
+		z-index: 1001;
 		width: 600px;
 		min-height: 200px;
 		position: fixed;
